monitor_logs/launchd_stderr.log
  File "<stdin>", line 1
    {"tunnels":[{"name":"command_line","ID":"7787ed75189c49e79d93fbacfe192076","uri":"/api/tunnels/command_line","public_url":"https://gestureless-rancorously-zariah.ngrok-free.dev","proto":"https","config":{"addr":"http://localhost:8000","inspect":true},"metrics":{"conns":{"count":6,"gauge":0,"rate1":0.0023848990135334792,"rate5":0.005155174722741695,"rate15":0.003648486716660061,"p50":2385813,"p90":13294896791,"p95":13294896791,"p99":13294896791},"http":{"count":6,"rate1":0.0023848990135334792,"rate5":0.005155174722741695,"rate15":0.003648486716660061,"p50":1321708.5,"p90":13292203334,"p95":13292203334,"p99":13292203334}}}],"uri":"/api/tunnels"}import json, sys
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               ^
SyntaxError: invalid syntax
